[package]
name = "kitchen-sink-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.4", features = ["derive"] }
prost = "0.12"
prost-types = "0.12"
rand = "0.8"

[build-dependencies]
prost-build = "0.12"
