[project]
name = "omes"
version = "0.1.0"
description = "Temporal load generator"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = "~=3.10.0"
license = "MIT"
dependencies = [
    "temporalio>=1.23.0,<2",
    "grpcio>=1.60.0,<2",
    "prometheus-client>=0.16.0,<0.17",
    "python-json-logger>=2.0.7,<3",
    "harness",
]

[dependency-groups]
dev = [
    "mypy>=1.4,<2",
    "black>=22.3.0,<23",
    "isort>=5.10.1,<6",
]

[tool.uv.sources]
harness = { workspace = true }

[tool.uv.workspace]
members = ["harness"]

[tool.hatch.build.targets.sdist]
include = ["*.py", "protos/**/*.py"]

[tool.hatch.build.targets.wheel]
include = ["*.py", "protos/**/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
format = [{cmd = "black ."}, {cmd = "isort ."}]
lint = [
  {cmd = "black --check ."},
  {cmd = "isort --check-only ."},
  {ref = "lint-types"},
]
lint-types = "mypy activities.py client_action_executor.py kitchen_sink.py kitchen_sink_app.py main.py nexus_service.py"

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = ["protos/*", "harness"]

[tool.black]
extend-exclude = '''
(
  protos/
  | harness
)
'''
