[project]
name = "harness"
version = "0.1.0"
description = "Reusable Python worker harness for Omes projects"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = "~=3.10.0"
license = "MIT"
dependencies = [
    "temporalio>=1.23.0,<2",
    "grpcio>=1.60.0,<2",
    "prometheus-client>=0.16.0,<0.17",
    "python-json-logger>=2.0.7,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.4,<2",
    "black>=22.3.0,<23",
    "isort>=5.10.1,<6",
]

[tool.hatch.build.targets.sdist]
include = ["src/harness/**/*.py", "tests/**/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
format = [{cmd = "black src tests"}, {cmd = "isort src tests"}]
lint = [
    {cmd = "black --check src tests"},
    {cmd = "isort --check-only src tests"},
    {ref = "lint-types"},
]
lint-types = "mypy --explicit-package-bases --namespace-packages --exclude 'src/harness/api/' src tests"
test = "python -m unittest discover -s tests -p 'test_*.py'"

[tool.mypy]
mypy_path = "src"

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = ["src/harness/api/*"]

[tool.black]
extend-exclude = '''
(
    src/harness/api/
)
'''
