[project]
name = "omes-python-project-helloworld"
version = "0.1.0"
description = "Python project scenario test fixture"
requires-python = "~=3.10"
dependencies = [
    "temporalio>=1.23.0,<2",
    "harness",
]

[tool.hatch.build.targets.sdist]
include = ["*.py"]

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
harness = { path = "../../../harness", editable = true }