
[project]
name = "python-program-program-1580327662"
version = "0.1.0"
description = "Temporal SDK Python Test"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = "~=3.10"
dependencies = [
    "simple-test",
    "temporalio==1.21.1",
]

[tool.uv.sources]
simple-test = { path = "../", editable = true }
