
[project]
name = "python-program-program-621856787"
version = "0.1.0"
description = "Temporal SDK Python Test"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = "~=3.10"
dependencies = [
    "simple-test",
    "temporalio",
]

[tool.uv.sources]
temporalio = { path = "../../../../../../sdk-python/dist/temporalio-1.21.1-cp310-abi3-macosx_11_0_arm64.whl" }
simple-test = { path = "../", editable = true }
